# aplite

./: README.md  imperative-edsl.cabal
examples/: Aplite.hs
src/Control/: Monads.hs
src/Haste/: Aplite.hs
src/Language/C/: Monad.hs
src/Language/Embedded/: CExp.hs  Expression.hs  Imperative.hs
src/Language/Embedded/Backend/: JS.hs
src/Language/Embedded/Imperative/: Args.hs  CMD.hs  Frontend.hs
src/Language/Embedded/Imperative/Backend/: JS.hs
src/Language/Embedded/Imperative/Frontend/: General.hs
src/Language/JS/: BinOps.hs  CompExp.hs  Export.hs  Expression.hs  Monad.hs  Print.hs  Syntax.hs
